--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ android {
     compileSdk 34
 
 
-
     defaultConfig {
         applicationId "com.example.at1"
         minSdk 19
@@ -34,8 +33,8 @@ android {
         jvmTarget = '1.8'
     }
 
-    buildFeatures{
-        viewBinding = true
+    buildFeatures {
+        viewBinding true
     }
 }
 
